force-app/main/default/objects/KimbleOne__PlanPreference__c/KimbleOne__PlanPreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Plan Preference</label>
</CustomObject>