force-app/main/default/objects/KimbleOne__PlanPreference__c/fields/KimbleOne__DefaultIsCompletedByPredecessorTasks__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultIsCompletedByPredecessorTasks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Default new Plan Milestones to be Completed by Predecessor Tasks in a Tracking Plan</inlineHelpText>
    <label>Default Is Completed By Predecessor Tsks</label>
    <type>Checkbox</type>
</CustomField>