force-app/main/default/objects/KimbleOne__PlanPreference__c/fields/KimbleOne__DefaultIsFixedEffort__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultIsFixedEffort__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Default new Plan Tasks to Fixed Effort</inlineHelpText>
    <label>Default Is Fixed Effort</label>
    <type>Checkbox</type>
</CustomField>