force-app/main/default/objects/KimbleOne__PlanPreference__c/fields/KimbleOne__DefaultPlanGanttView__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultPlanGanttView__c</fullName>
    <label>Default Plan Gantt View</label>
    <length>80</length>
    <type>Text</type>
</CustomField>