force-app/main/default/objects/KimbleOne__PlanPreference__c/fields/KimbleOne__DefaultTaskDates__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultTaskDates__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Default Start and End Dates for new Manually Scheduled Plan Tasks</inlineHelpText>
    <label>Default Task Dates</label>
    <type>Checkbox</type>
</CustomField>