force-app/main/default/objects/KimbleOne__PlanPreference__c/fields/KimbleOne__ReduceRemainingEffortByExpended__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReduceRemainingEffortByExpended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce Remaining Effort By Expended</label>
    <type>Checkbox</type>
</CustomField>